MFamd64: Add a machdep.bootmethod sysctl to inform the installer which firmware method was used for booting.  This is hardcoded to BIOS on i386.

PR:		192962
Reviewed by:	nwhitehorn
MFC after:	1 week

Former-commit-id: ad201b34be06467297a52dcb80bd725937cce902